<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:imeOptions="flagNoFullscreen"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:visibility="visible"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <Button
        android:id="@+id/addporod"
        android:layout_width="0dp"
        android:layout_height="@dimen/custom_size_button_menu"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="15dp"
        android:layout_weight="1"
        android:layout_gravity="center"

        android:backgroundTint="@color/color_button_main"
        android:drawableTop="@drawable/leaf"
        android:text="@string/menu_add_porod"
        android:textSize="10sp"
        app:cornerRadius="30dp" />

    <Button
        android:id="@+id/user"
        android:layout_width="0dp"
        android:layout_height="@dimen/custom_size_button_menu"
        android:layout_marginEnd="10dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:backgroundTint="@color/color_button_main"
        android:paddingTop="8dp"
        android:drawableTop="@drawable/gps"
        android:text="@string/menu_gps"
        android:textSize="10sp"
        app:cornerRadius="30dp" />



    <Button
        android:id="@+id/open"
        android:layout_width="0dp"
        android:layout_height="@dimen/custom_size_button_menu"
        android:layout_gravity="center"
        android:layout_marginEnd="10dp"
        android:layout_weight="1"
        android:backgroundTint="@color/color_button_main"
        android:drawableTop="@drawable/camera"

        android:text="@string/menu_photo_point"
        android:textSize="10sp"

        app:cornerRadius="30dp" />

    <Button
        android:id="@+id/save"
        android:layout_width="0dp"
        android:layout_height="@dimen/custom_size_button_menu"
        android:layout_gravity="center"
        android:layout_marginEnd="15dp"
        android:layout_weight="1"
        android:backgroundTint="@color/color_button_main"
        android:drawableTop="@drawable/save"
        android:paddingTop="8dp"
        android:text="@string/menu_save"
        android:textSize="10sp"
        app:cornerRadius="30dp" />

</LinearLayout>
