<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:imeOptions="flagNoFullscreen"
    android:orientation="horizontal"
    android:visibility="visible"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <Button
        android:id="@+id/addbutton"
        android:layout_width="0dp"
        android:layout_height="@dimen/custom_size_button_menu"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="10dp"
        android:paddingTop="8dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:backgroundTint="@color/color_button_main"
        android:drawableTop="@drawable/plus_svg"
        android:text="@string/menu_add"
        android:textSize="10sp"
        app:cornerRadius="30dp" />

    <Button
        android:id="@+id/share"
        android:layout_width="0dp"
        android:layout_height="@dimen/custom_size_button_menu"
        android:layout_marginEnd="10dp"
        android:paddingTop="15dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:backgroundTint="@color/color_button_main"
        android:drawableTop="@drawable/share"
        android:text="@string/menu_share"
        android:textSize="10sp"
        app:cornerRadius="30dp" />

    <Button
        android:id="@+id/show_track"
        android:layout_width="0dp"
        android:layout_height="@dimen/custom_size_button_menu"
        android:layout_marginEnd="10dp"
        android:layout_weight="1"
        android:paddingTop="15dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/color_button_main"
        android:drawableTop="@drawable/show"
        android:text="@string/menu_open"
        android:textSize="10sp"

        app:cornerRadius="30dp" />

    <Button
        android:id="@+id/delete"
        android:layout_width="0dp"
        android:layout_height="@dimen/custom_size_button_menu"
        android:layout_marginEnd="15dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:backgroundTint="@color/color_button_main"
        android:paddingTop="7dp"
        android:drawableTop="@drawable/minus_svg"
        android:text="@string/menu_delete"
        android:textSize="10sp"
        app:cornerRadius="30dp" />

</LinearLayout>
